--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,10 +13,12 @@
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "axios": "^1.2.3",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "expo": "~47.0.12",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "^2.0.1",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
     "react-dom": "18.1.0",
